# DRender

./: CMakeLists.txt  README.md
include/: Colors.h  Colors.hpp  FreeCamera.hpp  GLHelpers.hpp  GameContext.hpp  InputManager.hpp  Logger.h  Logger.hpp  Primitives.h  Primitives.hpp  ShaderUtils.h  ShaderUtils.hpp  TechDemo.h  TechDemo.hpp  Vertex.hpp  stdafx.hpp
include/Graphics/: GLRenderer.hpp  Renderer.hpp  VulkanRenderer.hpp
include/Prefabs/: CubePosCol.hpp  SpherePosCol.hpp
include/Scene/: BaseScene.hpp  SceneManager.hpp  TestScene.hpp
include/Window/: GLFWWindowWrapper.hpp  GLWindowWrapper.hpp  VulkanWindowWrapper.hpp  Window.hpp
resources/shaders/: compile.sh  simple.frag  simple.vert  vk_vertex_pos_col.vert  vk_vertex_pos_col_tex.frag  vk_vertex_pos_col_tex_frag.spv
src/: Colors.cpp  FreeCamera.cpp  InputManager.cpp  Logger.cpp  Primitives.cpp  ShaderUtils.cpp  TechDemo.cpp  main.cpp
src/Graphics/: GLRenderer.cpp  Renderer.cpp  VulkanRenderer.cpp
src/Prefabs/: CubePosCol.cpp  SpherePosCol.cpp
src/Scene/: BaseScene.cpp  SceneManager.cpp  TestScene.cpp
src/Window/: GLFWWindowWrapper.cpp  GLWindowWrapper.cpp  VulkanWindowWrapper.cpp  Window.cpp
util/Helpers/: Helpers.cpp  Helpers.hpp
util/Random/: Random.cpp  Random.h  Random.hpp
util/glad/: glad.c  glad.h
util/tiny_obj_loader/: tiny_obj_loader.h
